    it's non-empty.

  - If the compiler produces no object file or an empty object file, but gives
    a zero exit status (could be due to a file system problem, a buggy program
    specified by CCACHE_PREFIX, etc.), ccache copes with it properly.

  - Added installcheck and distcheck make targets.

  - Clarified cache size limit options' semantics

Bug fixes:

  - Fixed build on FreeBSD.

  - Improved detection of home directory.

  - User-defined CPPFLAGS and LDFLAGS are now respected in the Makefile.

  - Fixed NFS issues.

  - Bail out on too hard compiler options --coverage, -fprofile-arcs,
    -fprofile-generate, -fprofile-use, -ftest-coverage and -save-temps. Also
    bail out on "@file" style options.

  - -MD/-MMD options without -MT/-MF are now handled correctly.

  - Added support for -Wp,-MD and -Wp,-MMD options.

  - Corrected LRU cleanup handling of object files.

  - utimes() is now used instead of utime() when available.

  - Non-writable cache directories are now handled gracefully.

  - Corrected documentation about sharing the cache directory.

  - Fixed compilation warnings from GCC 4.3.

  - The command specified by CCACHE_PREFIX is no longer part of the hash.

  - Fixed bad memory access spotted by Valgrind.

  - Fixed a bug in x_realloc.

  - Removed deprecated constructions from ccache.yo.

  - Freed memory is no longer referenced when compiling a .i/.ii file and
    falling back to running the real compiler.

  - The test suite is now immune to external values of the CCACHE_* environment
    variables.

Upgrading notes:

  - The way the hashes are calculated has changed, so you won't get cache hits
    for compilation results stored by older ccache versions.

  - The statistics counters "files in cache" and "cache size" now only count
    object files. (Previously, files containing cached standard error output
    were counted as well.) The existing values of the two counters will be