@@ -57,6 +57,8 @@ New features and improvements:
 
   - Clarified cache size limit options' semantics
 
+  - Improved display of cache max size values.
+
 Bug fixes:
 
   - Fixed build on FreeBSD.
